@@ -25,6 +25,7 @@ Version 1.4.12 - SVN
     a body location part (e.g. Sun Java System Messaging Server). Thanks
     John Callahan (#1808382).
   - Invalid initialization of To: header (#1772893).
+  - Includes cleanup in include/validate.php.
   
 
 Version 1.4.11 - 29 September 2007
